Rewrote tests to parse view size. Updated project to use correct parsing of the scene file size property, adjusts correctly.

--- a/SwiftTrayRacer/SwiftTrayRacer/Base.lproj/Main.storyboard
+++ b/SwiftTrayRacer/SwiftTrayRacer/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="14F1021" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15C50" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9059"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9532"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -668,15 +668,19 @@
         <scene sceneID="hIz-AP-VOD">
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="ViewController" customModule="SwiftTrayRacer" sceneMemberID="viewController">
-                    <view key="view" id="m2S-Jp-Qdl">
+                    <view key="view" wantsLayer="YES" id="m2S-Jp-Qdl">
                         <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <imageView identifier="trayRacerImageView" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DGc-ty-ba4">
-                                <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
-                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="Odb-t8-WGG"/>
+                            <imageView identifier="trayRacerImageView" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DGc-ty-ba4">
+                                <rect key="frame" x="25" y="19" width="431" height="232"/>
+                                <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageAlignment="topLeft" imageScaling="proportionallyDown" id="Odb-t8-WGG"/>
                             </imageView>
                         </subviews>
+                        <constraints>
+                            <constraint firstItem="DGc-ty-ba4" firstAttribute="centerY" secondItem="m2S-Jp-Qdl" secondAttribute="centerY" id="bxB-2k-nk4"/>
+                            <constraint firstItem="DGc-ty-ba4" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="oaO-tF-wDt"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="trayRacerImageView" destination="DGc-ty-ba4" id="72m-Kk-pSf"/>
